test/files/run/stub-errors/ReturnTypePolyFunction.check
error: newSource1.scala:4: missing or invalid dependency while loading 'class stuberrors.D' in class file 'D.class'.
Already compiled 'class stuberrors.D' requires access to type A in package stuberrors.
Make sure that type A is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'D.class' was compiled against an incompatible version of stuberrors.
    abstract class C extends App {
                   ^
error: newSource1.scala:5: missing or invalid dependency while loading 'type stuberrors.B.T' in class file 'B.class'.
Already compiled 'type stuberrors.B.T' requires access to type A in package stuberrors.
Make sure that type A is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'B.class' was compiled against an incompatible version of stuberrors.
      val b = new B
          ^
error: newSource1.scala:13: type arguments [stuberrors.D] do not conform to method foo's type parameter bounds [T <: stuberrors.A]
      b.foo[D]
           ^